Adjustment of CSS positioning

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 
 <head>
+    <link type="text/css" rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" type="text/css">
-
 </head>
+
+<nav>
+    <a style="text-decoration: none;" href="index.html">Home</a>
+    <a style="text-decoration: none;" href="projects.html">Projects</a>
+    <a style="text-decoration: none;" href="contact.html">Contact Information</a>
+</nav>
 
 <body>
     <h1>Contact Information</h1>
