--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <link type="text/css" rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
@@ -10,8 +11,11 @@
 </nav>
 
 <body>
-    <img class="background" alt="Background image" src= https://images.unsplash.com/photo-1547296915-8b37c9999d87?ixlib=rb-1.2.1&auto=format&fit=crop&w=1191&q=80>
+    <img class="background" alt="Background image" src="images/background.jpg">
     <p id="greeting"> Hello! I'm Evan Talavera.</p>
+    <p id="intro">I'm Evan Talavera, a year 1 student in Ngee Ann Polytechnic pursuing a Diploma in Immersive Media.
+        I enjoy playing, studying and developing video games. I'm currently honing my skills as well as 3D Modelling.
+    </p>
 </body>
 
 
