--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+
+<head>
+    <link type="text/css" rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" type="text/css">
+</head>
+
+<nav>
+    <a style="text-decoration: none;" href="index.html">Home</a>
+    <a style="text-decoration: none;" href="projects.html">Projects</a>
+    <a style="text-decoration: none;" href="contact.html">Contact Information</a>
+</nav>
