Layout and colour scheme changes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <link type="text/css" rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" type="text/css">
@@ -14,9 +15,36 @@
     <img class="background" alt="Background image" src="images/background.jpg">
     <p id="greeting"> Hello! I'm Evan Talavera.</p>
     <p id="intro">I'm Evan Talavera, a year 1 student in Ngee Ann Polytechnic pursuing a Diploma in Immersive Media.
-        I enjoy playing, studying and developing video games. I'm currently honing my skills as well as 3D Modelling.
+        I enjoy playing, analyzing and developing video games. I'm currently honing my skills as well as 3D Modelling.
     </p>
+    <div class="summary">
+     <div class = "content">
+        <p>
+            This is the current page that you're on, it has general information about myself as well as a summary of the other pages.
+        </p>
+        <a class="button" style="text-decoration: none;" href="index.html">Home</a>
+
+     </div>
+     <div class="content">
+        <p>
+             This page contains a portfolio of previous projects that I've worked on, it is also the home for future projects of mine!
+        </p>
+        <a class="button" style="text-decoration: none;" href="projects.html">Projects</a>
+     </div> 
+     <div class= "content">
+        <p>
+            This page contains my contact information if you'd like to get in touch!
+        </p>
+        <a class="button" style="text-decoration: none;" href="contact.html">Contact Information</a>
+     </div>
+        
+    
+
+    </div>
 </body>
+
+</html>
+
 
 
 
