--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 
 <head>
     <link type="text/css" rel="stylesheet" href="normalize.css" />
@@ -10,3 +11,9 @@
     <a style="text-decoration: none;" href="projects.html">Projects</a>
     <a style="text-decoration: none;" href="contact.html">Contact Information</a>
 </nav>
+
+<body>
+    
+
+</body>
+</html>
