--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,18 @@
 </nav>
 
 <body>
-    <h1>Contact Information</h1>
-    <ul>
-        <li>E-mail:</li>
-        <li>Contact no.:</li>
-        <li></li>
-    </ul>
-    <form>
-        <input type="text" placeholder="Leave a message">
-    </form>
+    <div class="ContactInfo">
+        <div class="ContactContent">
+        <h1>Contact Information</h1>
+        <ul>
+            <li>E-mail: s10206687@connect.np.edu.sg</li>
+            <li>Contact no.: +65 9489 6654</li>
+            <li>Instagram: @yerboilego</li>
+        </ul>
+        <form>
+            <textarea placeholder="Leave a message" style="height:200px"></textarea>
+
+        </form>
+        </div>
+</div>
 </body>
