--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,19 @@
 </nav>
 
 <body>
+    <div class= "project">
+        <h1 class="ProjectHeading">3D Model: Ice Cream Truck (WIP)</h1>
+        <img class="IceCreamTruck" alt="A 3D Model of an ice cream truck" src="images/project1.JPG">
+        <p class="ProjectDescription">
+            This project revolves around a 3D Model based off of an illustration of an Ice Cream truck.
+            It has a modelled interior, working doors and a few high-poly versions for certain parts of the 
+            truck.
+
+        </p>
+
+    </div>
     
+
 
 </body>
 </html>
